--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <table border="1">
+		  <tr>
+			  <td>left</td>
+			  <td>center</td>
+			  <td>right</td>
+		  </tr>
+		  <tr>
+			  <td>left</td>
+			  <td>center</td>
+			  <td>right</td>
+		  </tr>
+		  <tr>
+			  <td>left</td>
+			  <td>center</td>
+			  <td>right</td>
+		  </tr>
+	  </table>
     <script type="text/javascript" src="./script.js">
 </script>
 
