--- a/main.html
+++ b/main.html
@@ -8,21 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	  <table border="1">
+	<h2 style="text-align:center">HTML Assignment #3</h2>
+	  <table border="1" id="table-1" class="middle" style="width:100%">
 		  <tr>
-			  <td>left</td>
-			  <td>center</td>
-			  <td>right</td>
+			  <td id="t11">left</td>
+			  <td id="t12" style="text-align:center">center</td>
+			  <td id="t13" style="text-align:right">right</td>
 		  </tr>
 		  <tr>
 			  <td>left</td>
-			  <td>center</td>
-			  <td>right</td>
+			  <td style="text-align:center">center</td>
+			  <td style="text-align:right">right</td>
 		  </tr>
 		  <tr>
 			  <td>left</td>
-			  <td>center</td>
-			  <td>right</td>
+			  <td style="text-align:center">center</td>
+			  <td style="text-align:right">right</td>
 		  </tr>
 	  </table>
     <script type="text/javascript" src="./script.js">
