--- a/main.html
+++ b/main.html
@@ -13,18 +13,22 @@
 		  <tr>
 			  <td id="t11">left</td>
 			  <td id="t12" style="text-align:center">center</td>
-			  <td id="t13" style="text-align:right">right</td>
+			  <td id="t13" style="text-align:right" class="right">right</td>
+		  </tr>
+		  <tr class="center">
+			  <td>left</td>
+			  <td style="text-align:center">center</td>
+			  <td style="text-align:right" class="right">right</td>
 		  </tr>
 		  <tr>
 			  <td>left</td>
 			  <td style="text-align:center">center</td>
-			  <td style="text-align:right">right</td>
+			  <td style="text-align:right" class="right">right</td>
 		  </tr>
-		  <tr>
-			  <td>left</td>
-			  <td style="text-align:center">center</td>
-			  <td style="text-align:right">right</td>
-		  </tr>
+	  </table>
+<br>
+	  <table border="1" id="table-2" class="middle" style="width:100%">
+		  
 	  </table>
     <script type="text/javascript" src="./script.js">
 </script>
