--- a/main.html
+++ b/main.html
@@ -28,7 +28,39 @@
 	  </table>
 <br>
 	  <table border="1" id="table-2" class="middle" style="width:100%">
-		  
+		  <tr style="height:20px">
+			  <td colspan="6"></td>
+		  </tr>
+		  <tr>
+			  <td rowspan="5"></td>
+		  </tr>
+		  <tr style="height:20px">
+			  <td></td>
+			  <td></td>
+			  <td></td>
+			  <td></td>
+			  <td></td>
+		  </tr>
+		  <tr style="height:20px">
+			  <td></td> 
+			  <td colspan="3" rowspan="2"></td>
+			  <td></td>
+			  
+		  </tr>
+		  <tr style="height:20px">
+			  <td></td>
+			  <td></td>
+		  </tr>
+		  <tr style="height:20px">
+			  <td></td>
+			  <td></td>
+			  <td></td>
+			  <td></td>
+			  <td></td>
+		  </tr>
+		  <tr style="height:20px">
+			  <td colspan="6"></td>
+		  </tr>
 	  </table>
     <script type="text/javascript" src="./script.js">
 </script>
