--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 <br>
 	  <table border="1" id="table-2" class="middle" style="width:100%">
 		  <tr style="height:20px">
-			  <td colspan="6"></td>
+			  <td colspan="6" id="t21"></td>
 		  </tr>
 		  <tr>
 			  <td rowspan="5"></td>
@@ -62,6 +62,18 @@
 			  <td colspan="6"></td>
 		  </tr>
 	  </table>
+<br>
+	 <table border="1" id="table-3" class="middle" style="width:100%">
+		 <tr style="height:20px">
+			 <td style="background:green"></td>
+		 </tr>
+		 <tr style="height:20px">
+			 <td><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Sample Image"</td>
+		 </tr>
+		 <tr style="height:20px">
+			 <td style="background:blue"></td>
+		 </tr>
+	 </table>
     <script type="text/javascript" src="./script.js">
 </script>
 
