--- a/main.html
+++ b/main.html
@@ -68,7 +68,7 @@
 			 <td style="background:green"></td>
 		 </tr>
 		 <tr style="height:20px">
-			 <td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Sample Image"/></td>
+			 <td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" style="display: block; margin-left:auto; margin-right: auto;" alt="Sample Image"/></td>
 		 </tr>
 		 <tr style="height:20px">
 			 <td style="background:blue"></td>
